objects/DP_Picklist_Usage__c.object
<CustomObject>
    <description>The Picklist Usage custom object will contain the location (object and field) of where the dynamic picklist is used. This will also contain the field location of a controlling value for the picklist</description>
    <fields>
        <fullName>Controlling_Field_Rule__c</fullName>
        <inlineHelpText>Does the controlling field have to equal the value or just contain the value?</inlineHelpText>
        <label>Controlling Field Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Contains Controlling Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equals Controlling Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controlling_Field__c</fullName>
        <inlineHelpText>Field which contains a value that limits the available values for this picklist.  The field must be on the same object as the picklist usage.</inlineHelpText>
        <label>Controlling Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <inlineHelpText>API Name of the Field where this picklist is used</inlineHelpText>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>API Name of the Object where this picklist is used</inlineHelpText>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picklist</label>
        <referenceTo>DP_Picklist__c</referenceTo>
        <relationshipLabel>Picklist Usages</relationshipLabel>
        <relationshipName>Picklist_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Dependent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are the values for this picklist usage limited by record type?</inlineHelpText>
        <label>Record Type Dependent?</label>
        <type>Checkbox</type>
    </fields>
    <label>Picklist Usage</label>
    <nameField>
        <displayFormat>PLU-{000000}</displayFormat>
        <label>Picklist Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Usages</pluralLabel>
    <recordTypes>
        <fullName>Picklist_Usage</fullName>
        <active>true</active>
        <label>Picklist Usage</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>